# container-app-example

./: Makefile  README.md  pyproject.toml
demo/: app.py
